--- a/getting-started/gcloud-app/Dockerfile
+++ b/getting-started/gcloud-app/Dockerfile
@@ -1,5 +1,6 @@
 FROM jfloff/alpine-python:3.4
 
+RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
