--- a/getting-started/gcloud-app/app.yaml
+++ b/getting-started/gcloud-app/app.yaml
@@ -1,2 +1,6 @@
-runtime: custom
+runtime: python
 env: flex
+entrypoint: gunicorn -b :$PORT gettingstarted.wsgi
+
+runtime_config:
+  python_version: 3
