--- a/marina-rest-api/Dockerfile
+++ b/marina-rest-api/Dockerfile
@@ -6,9 +6,12 @@ RUN apk update && \
 
 WORKDIR /usr/src/app
 RUN mkdir -p /usr/src/app
-COPY . . 
+COPY . .
 
 RUN pip install -r requirements.txt
 
+# Create superuser 
+RUN echo "from django.contrib.auth.models import User; User.objects.create_superuser('admin', '', 'admin')" | python manage.py shell
+
 EXPOSE 8000
-CMD ["./manage.py", "runserver", "127.0.0.1:8000"]
+CMD ["python", "manage.py", "runserver", "127.0.0.1:8000"]
