--- a/marina-rest-api/Dockerfile
+++ b/marina-rest-api/Dockerfile
@@ -10,7 +10,11 @@ COPY . .
 
 RUN pip install -r requirements.txt
 
-# Create superuser 
+# Configure database
+RUN python manage.py migrate auth && \
+    python manage.py makemigrations && \
+    python manage.py migrate
+# Create superuser
 RUN echo "from django.contrib.auth.models import User; User.objects.create_superuser('admin', '', 'admin')" | python manage.py shell
 
 EXPOSE 8000
