rest framework working

--- a/marina-rest-api/Dockerfile
+++ b/marina-rest-api/Dockerfile
@@ -10,12 +10,5 @@ COPY . .
 
 RUN pip install -r requirements.txt
 
-# Configure database
-RUN python manage.py migrate auth && \
-    python manage.py makemigrations && \
-    python manage.py migrate
-# Create superuser
-RUN echo "from django.contrib.auth.models import User; User.objects.create_superuser('admin', '', 'admin')" | python manage.py shell
-
 EXPOSE 8000
-CMD ["python", "manage.py", "runserver", "127.0.0.1:8000"]
+CMD ["/usr/src/app/entrypoint.sh"]
