--- a/oauth-implementation/package.json
+++ b/oauth-implementation/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --use-strict index.js"
+    "dev": "./node_modules/.bin/nodemon --use-strict index.js",
+    "start": "node --use-strict index.js"
   },
   "author": "Alec Merdler",
   "license": "MIT",
