--- a/android-ui/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/android-ui/AndroidUI/app/src/main/AndroidManifest.xml
@@ -33,5 +33,9 @@
             android:name=".main.horizontal.HorizontalActivity"
             android:configChanges="orientation"
             android:screenOrientation="landscape" />
+        <activity
+            android:name=".main.infinite.InfiniteActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
