--- a/android-ui/AndroidUI/app/build.gradle
+++ b/android-ui/AndroidUI/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.github.pwittchen:infinitescroll:0.0.1'
     testCompile 'junit:junit:4.12'
 }
