--- a/android-ui/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/android-ui/AndroidUI/app/src/main/AndroidManifest.xml
@@ -37,5 +37,9 @@
             android:name=".main.infinite.InfiniteActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".main.locations.LocationActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
