--- a/android-ui/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/android-ui/AndroidUI/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="edu.oregonstate.cs496.merdlera.androidui">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
