--- a/android-oauth/AndroidOAuth/app/build.gradle
+++ b/android-oauth/AndroidOAuth/app/build.gradle
@@ -27,6 +27,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dataBinding {
+        enabled = true
+    }
+}
+
+repositories {
+    mavenCentral()
 }
 
 dependencies {
@@ -34,9 +41,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'com.google.android.gms:play-services-auth:9.2.0'
     compile 'com.google.api-client:google-api-client:1.22.0'
     compile 'com.google.api-client:google-api-client-android:1.22.0'
+    compile 'com.google.apis:google-api-services-plusDomains:v1-rev433-1.22.0'
     testCompile 'junit:junit:4.12'
 }
