--- a/final-project/user-microservice-ninja/nginx.conf
+++ b/final-project/user-microservice-ninja/nginx.conf
@@ -1,14 +1,17 @@
-upstream ninja {
-  server 127.0.0.1:8080;
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+
+events {
+  worker_connections 768;
 }
 
 http {
   server {
-    listen: 80;
-    server_name: localhost;
+    listen 80;
 
     location / {
-      proxy_pass: ninja;
+      proxy_pass http://127.0.0.1:8080;
     }
   }
 }
