--- a/final-project/user-microservice-ninja/pom.xml
+++ b/final-project/user-microservice-ninja/pom.xml
@@ -207,5 +207,10 @@
             <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.22.0</version>
+        </dependency>
     </dependencies>
 </project>
