--- a/final-project/user-microservice-ninja/pom.xml
+++ b/final-project/user-microservice-ninja/pom.xml
@@ -212,5 +212,15 @@
             <artifactId>google-api-client</artifactId>
             <version>1.22.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-plus</artifactId>
+            <version>v1-rev529-1.22.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-tasks</artifactId>
+            <version>v1-rev47-1.22.0</version>
+        </dependency>
     </dependencies>
 </project>
