--- a/final-project/user-microservice-ninja/nginx.conf
+++ b/final-project/user-microservice-ninja/nginx.conf
@@ -10,8 +10,12 @@ http {
   server {
     listen 80;
 
-    location / {
+    location /api/v1/users {
       proxy_pass http://127.0.0.1:8080;
+    }
+
+    location /api/v1/meals {
+      proxy_pass http://127.0.0.1:8000;
     }
   }
 }
